--- a/unbranded-crisis/unbranded-crisis-10/styles/style.css
+++ b/unbranded-crisis/unbranded-crisis-10/styles/style.css
@@ -23,6 +23,9 @@ input[type="submit"] {
     display: block;
     transition: .6s all linear;
 }
+textarea {
+  resize: none;
+}
 .button:hover, .button.mobile:hover, input[type="submit"]:hover{
     background: #991ae8;
 }
@@ -128,6 +131,9 @@ input[type="submit"] {
     color: #000;
     outline: none;
     border: none;
+}
+.header__form-input.msg {
+  min-height: 90px;
 }
 .header__form-input::placeholder {
     margin-bottom: 20px;
@@ -479,6 +485,13 @@ input[type="submit"] {
     background-image: url(../content/footer.png);
     background-size: cover;
     background-position: center;
+}
+.footer__form-container {
+  border-radius: 24px;
+  padding: 28px 78px;
+  background: #4a2461;
+  max-width: 620px;
+  width: 100%;
 }
 .why__image.mobile{
     display: none;
