--- a/unbranded-crisis/unbranded-crisis-11/styles/style.css
+++ b/unbranded-crisis/unbranded-crisis-11/styles/style.css
@@ -454,6 +454,7 @@ h4 {
 }
 .footer__inner {
     display: flex;
+    gap: 24px;
 }
 .footer__title {
     font-weight: 700;
@@ -464,17 +465,21 @@ h4 {
     margin-bottom: 39px;
 }
 .footer__box{
-    position: relative;
-    padding-right: 78px;
-    height: 478px;
+  display: flex;
+  gap: 78px;
+  position: relative;
+  min-height: 100%;
+  min-width: 50%;
 }
 .footer__box-head{
     position: absolute;
-    right: 0px;
+    right: -60px;
     top: 0;
     bottom: 0;
     margin: auto;
 }
-.footer__image{
-    height: 100%;
+.footer__image {
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
 }
