--- a/unbranded-crisis/unbranded-crisis-3/styles/style.css
+++ b/unbranded-crisis/unbranded-crisis-3/styles/style.css
@@ -26,7 +26,8 @@ p {
     margin: 0;
     padding: 0;
 }
-a {
+a,
+button {
     transition: .4s all linear;
     font-family: "Lato", sans-serif;
     font-weight: 400;
@@ -40,7 +41,8 @@ a {
     text-decoration: none;
     width: fit-content;
 }
-a:hover{
+a:hover,
+button:hover{
     background: #1202a1;
 }
 .header {
