--- a/unbranded-crisis/unbranded-crisis-8/styles/media.css
+++ b/unbranded-crisis/unbranded-crisis-8/styles/media.css
@@ -4,6 +4,26 @@
     }
 }
 @media (max-width: 930px) {
+  .footer {
+    padding: 70px 0 55px;
+  }
+  .footer__inner {
+    flex-direction: column;
+}
+.footer__content,
+.footer__form-container {
+  max-width: initial;
+}
+.footer__title {
+  text-align: center;
+}
+.footer__text {
+  text-align: center;
+}
+.footer__content > form >.button{
+  display: block;
+  margin: 0 auto;
+}
     .why__inner {
         flex-direction: column-reverse;
     }
@@ -26,9 +46,6 @@
     }
 }
 @media (max-width: 768px) {
-    .footer__inner {
-        flex-direction: column;
-    }
     .footer {
         padding: 59px 0;
     }
@@ -39,7 +56,6 @@
         font-weight: 600;
         font-size: 24px;
         margin-bottom: 16px;
-        text-align: center;
     }
     .footer__content{
         margin-bottom: 40px;
@@ -51,11 +67,6 @@
     .footer__text {
         font-size: 14px;
         margin-bottom: 16px;
-        text-align: center;
-    }
-    .footer__content > form >.button{
-        display: block;
-        margin: 0 auto;
     }
     .stories {
         padding: 15px 0;
