insurance form updates

--- a/unbranded-crisis/unbranded-crisis-11/styles/style.css
+++ b/unbranded-crisis/unbranded-crisis-11/styles/style.css
@@ -403,7 +403,7 @@ h4 {
     display: none;
 }
 
-.footer__form {
+.footer__form-container {
     padding: 34px 36px;
     max-width: 563px;
     width: 100%;
